@@ -295,7 +295,7 @@ FolderPanel.2xClickAction=file-open
 
 #FolderTable=Flagged:New:Attachments:SentDate:From:Subject
 #FolderTable=New:SentDate:From:Subject
-FolderTable=MsgNumber:Status:Attachments:SentDate:From:Subject
+FolderTable=MsgNumber:Status:Attachments:Crypto:SentDate:From:Subject
 FolderTable.MsgNumber.size=30
 FolderTable.MsgNumber.type=RowCounter
 FolderTable.Status.type=Multi
@@ -323,6 +323,9 @@ FolderTable.New.size=15
 FolderTable.Attachments.value=attachments
 FolderTable.Attachments.profileItems=Content-Type
 FolderTable.Attachments.icon=/net/suberic/pooka/gui/images/SmallPin.gif
+FolderTable.Crypto.value=crypto
+FolderTable.Crypto.profileItems=Content-Type
+FolderTable.Crypto.icon=/net/suberic/pooka/gui/images/Lock.gif
 #FolderTable.Attachments.class=net.suberic.pooka.gui.AttachmentCellRenderer
 FolderTable.Attachments.size=10
 FolderTable.SentDate.value=Date
