@@ -1,9 +1,11 @@
 package net.suberic.pooka.crypto;
 
 import net.suberic.pooka.*;
+import javax.mail.*;
+import javax.mail.internet.*;
 
 /**
- * This stores the encyrption information about a particular Message. 
+ * This stores the encyrption information about a particular MessageInfo. 
  */
 public class MessageCryptoInfo {
   
@@ -11,7 +13,7 @@ public class MessageCryptoInfo {
   MessageInfo msgInfo;
 
   /**
-   * Creates a MessageCryptoInfo for this given MessageInfo.
+   * Creates a MessageCryptoInfo for this given Message.
    */
   public MessageCryptoInfo(MessageInfo sourceMsg) {
     msgInfo = sourceMsg;
@@ -20,17 +22,17 @@ public class MessageCryptoInfo {
   /**
    * Returns whether or not this message is signed.
    */
-  public boolean isSigned() {
+  public boolean isSigned() throws MessagingException {
     // FIXME
-    return false;
+    return Pooka.getCryptoManager().getDefaultEncryptionUtils().isEncrypted(msgInfo.getMessage());
   }
 
   /**
    * Returns whether or not this message is encrypted.
    */
-  public boolean isEncrypted() {
+  public boolean isEncrypted() throws MessagingException {
     // FIXME
-    return false;
+    return Pooka.getCryptoManager().getDefaultEncryptionUtils().isEncrypted(msgInfo.getMessage());
   }
 
 }
